feat: 🎸 Login & sign in form design done without images file L
Login & sign in form design done without images file 🚀

BREAKING CHANGE: 🧨 Login & sign in form design done without images file 🚀

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,17 @@
   }
 }
 
+@layer utilities {
+  .large_container {
+    margin: 6.9rem 6rem;
+    z-index: 1 !important;
+  }
+  .container {
+    padding: 2.9rem 1rem;
+    z-index: 1 !important;
+  }
+}
+
 @font-face {
   font-family: "HindSiliguriBold";
   src: url("/fonts/HindSiliguri-Bold.ttf");
