--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,65 @@
     padding: 2.9rem 1rem;
     z-index: 1 !important;
   }
-}
+  .spinner_wrapper {
+    height: 100vh;
+    width: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    z-index: 10;
+  }
+  .spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 100px;
+    width: 100px;
+    margin: 0px auto;
+    -webkit-animation: rotation 0.5s infinite linear;
+    -moz-animation: rotation 0.5s infinite linear;
+    -o-animation: rotation 0.5s infinite linear;
+    animation: rotation 0.5s infinite linear;
+    border: 6px solid black;
+  }
 
+  @-webkit-keyframes rotation {
+    from {
+      -webkit-transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(359deg);
+    }
+  }
+  @-moz-keyframes rotation {
+    from {
+      -moz-transform: rotate(0deg);
+    }
+    to {
+      -moz-transform: rotate(359deg);
+    }
+  }
+  @-o-keyframes rotation {
+    from {
+      -o-transform: rotate(0deg);
+    }
+    to {
+      -o-transform: rotate(359deg);
+    }
+  }
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+}
 @font-face {
   font-family: "HindSiliguriBold";
   src: url("/fonts/HindSiliguri-Bold.ttf");
