--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,3 +84,26 @@ body {
     color-scheme: dark;
   }
 }
+
+/* .item {
+  min-height: 20rem;
+  min-width: 20rem;
+  padding: 40px;
+}
+.item img {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.inner-carousel {
+  display: flex;
+  background-color: #ff2c45;
+}
+.carousel {
+  cursor: grab;
+  overflow: hidden;
+  background: white;
+}
+.body {
+  margin: 10% 20%;
+} */
