feat: 🎸 Dashboard post page implemented with better ui design
Dashboard post page implemented with better ui design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,6 +99,12 @@
   .card-shadow {
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   }
+  .BLOG-THUMBNAIL:hover .upload_icon {
+    top: 50%;
+  }
+  .BLOG-COVER:hover .upload_icon {
+    top: 50%;
+  }
 }
 @font-face {
   font-family: "HindSiliguriBold";
@@ -131,6 +137,31 @@ body {
   overflow-x: hidden;
 }
 
+.ql-toolbar.ql-snow {
+  border: 3px solid #d3c4c4;
+  box-sizing: border-box;
+  padding: 8px;
+  border-radius: 7px;
+  box-shadow: 0px 4px 4px #564d564d;
+}
+
+.ql-container {
+  box-sizing: border-box;
+  font-size: 13px;
+  height: 28rem !important;
+  margin: 0px;
+  position: relative;
+}
+.ql-container.ql-snow {
+  border: none;
+}
+.loading-img {
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-0%, -50%) !important;
+  z-index: 999;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
