--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,11 @@
     --toastify-icon-color-warning: var(--toastify-color-warning);
     --toastify-icon-color-error: var(--toastify-color-error);
 
-    --toastify-toast-width: 320px;
+    --toastify-toast-width: 420px;
     --toastify-toast-background: #fff;
     --toastify-toast-min-height: 64px;
     --toastify-toast-max-height: 800px;
-    --toastify-font-family: sans-serif;
+    --toastify-font-family: "Hind Siliguri", sans-serif;
     --toastify-z-index: 9999;
 
     --toastify-text-color-light: #757575;
